# kashshaf

./: .env.web  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: deploy-api.yml  release.yml
api/: Cargo.toml
api/src/: cache.rs  error.rs  main.rs  search.rs  tokens.rs
docs/: KASHSHAF_API_SPEC.md  KASHSHAF_SPECIFICATION.md  KASHSHAF_UI_SPECIFICATION.md
public/: index.html  texts.xlsx
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  commands.rs  downloader.rs  error.rs  lib.rs  main.rs  search.rs  state.rs  tokens.rs
src/api/: index.ts  offline.ts  online.ts  tauri.ts
src/components/: ConcordanceSidebar.tsx  SearchBar.tsx  SearchTabs.tsx  Sidebar.tsx  TextDetailPage.tsx  Toolbar.tsx
src/components/About/: AboutPage.tsx
src/config/: api.ts
src/constants/: search.ts
src/contexts/: BooksContext.tsx  MetadataContext.tsx  ModalQueueContext.tsx  OperatingModeContext.tsx  SearchContext.tsx  SearchTabsContext.tsx
src/hooks/: useFilters.ts  useReaderNavigation.ts  useSearch.ts  useSearchTabs.ts  useUrlParams.ts
src/services/: metadataService.ts  opensearch.ts
src/stubs/: tauri-core.ts  tauri-dialog.ts  tauri-event.ts  tauri-fs.ts  tauri-shell.ts
src/styles/: index.css
src/types/: announcements.ts  collections.ts  index.ts  search.ts
src/utils/: announcements.ts  arabicNormalization.ts  arabicTokenizer.ts  collections.ts  exportData.ts  namePatterns.ts  platform.ts  sanitize.ts  storage.ts  textProcessing.ts  urlParams.ts  wildcardValidation.ts
(+51 files in other folders)
