[package]
name = "kashshaf-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
lru = "0.12"
chrono = { version = "0.4", features = ["serde"] }
governor = "0.6"
tower_governor = "0.4"
