[package]
name = "kashshaf"
version = "0.1.3"
description = "Medieval Arabic Text Research Environment"
authors = ["Kashshaf"]
edition = "2021"
default-run = "kashshaf"

[lib]
name = "kashshaf_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "kashshaf"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tantivy = "0.25"
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "sync", "fs"] }
lru = "0.12"
regex-lite = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["stream", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
futures-util = "0.3"
hex = "0.4"
dirs = "5"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
